# SonicLit

./: .gitignore  LICENSE  README.md  benchmark_complex_opt.py  benchmark_loop.py  migrate_gitlab_to_github.sh  old_signal_processing.py  patch_fwh_fix.py  patch_fwh_missing_vars.py  patch_fwh_missing_vars2.py  pyproject.toml  reproduce_zip_slip.py  requirements.txt  run_pytest.sh  streamlit_app.py  test_acorr.py  test_acorr_diff.py  test_acorr_diff2.py  test_acorr_diff3.py  test_acorr_diff4.py  test_acorr_old.py  test_metrics_help.py  verify_refactor.py
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
benchmark_data/: surf_12.csv  surf_14.csv  surf_18.csv  surf_5.csv  surf_9.csv
docs/: developer_guide.md  gui_manual.md
dummy_data/: signal.csv  surf_0.csv  surf_17.csv
scripts/: run_desktop.py  run_web.sh
src/dhvani/: fwh.py  modes.py  spectral_analysis.py
src/dhvani/gui/desktop/: app.py
src/dhvani/gui/web/: app.py
src/soniclit/: __init__.py  audio_generator.py  cavity_modes.py  fwh_solver.py  signal_processing.py  sound_from_pressure.py  utils.py
src/soniclit/gui/desktop/: app.py
src/soniclit/gui/web/: app.py
test_results/auto_corr_save_output/: auto_correlation.csv
tests/: dummy_signal.csv  generate_dummy_data.py  test_fft_optimization.py  test_fwh_integration.py  test_fwh_multi_observer.py  test_fwh_optimization.py  test_fwh_security.py  test_fwh_ssrf_lowlevel.py  test_gui_e2e.py  test_spectral_dummy.py  test_utils.py  test_ux_helpers.py  test_ux_improvements.py  test_web_app.py  test_web_security.py  test_web_ux.py  test_zip_security.py
tests/acoustics/: test_spectral_analysis.py
tests/data/: signal.csv  surf_1.csv  surf_12.csv  surf_6.csv
