[build-system]
requires = ["pdm.backend",
	"numpy==1.24.4",
	"vtk==9.3.0",
	"matplotlib==3.7.5",
	"pandas==2.0.3",
	"scipy==1.10.1",
	"setuptools==60.2.0",
	"pyarrow==15.0.0",
	"pytest==8.0.1",
	"mpi4py==3.1.5",
	"pyvista==0.43.0",
]
build-backend = "pdm.backend"

[project]
name = "dhvani"
#version = "1.0.0rc1"
dynamic = ["version"]
authors = [
	{name ="Athreya Ballapur Jayasimha", email="athreya@sankhyasutralabs.com"},
	{name ="Snehasis Chowdhury", email="snehasis@sankhyasutralabs.com"},
]
description = "A package for signal processing and advanced aeroacoustics modules"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://code.sankhyasutralabs.com/sslabs/cross-vertical/pre-post-libraries/dhvani"
Issues = "https://code.sankhyasutralabs.com/sslabs/cross-vertical/pre-post-libraries/dhvani/-/issues/"

[tool.pdm.version]
source = "file"
path = "src/dhvani/__init__.py"
