[build-system]
requires = ["pdm.backend",
	"numpy",
	"vtk",
	"matplotlib",
	"pandas",
	"scipy",
	"setuptools",
	"pyarrow",
	"pytest",
	"mpi4py",
	"pyvista",
]
build-backend = "pdm.backend"

[project]
name = "dhvani"
#version = "1.0.0rc1"
dynamic = ["version"]
authors = [
	{name ="Athreya Ballapur Jayasimha", email="athreya@sankhyasutralabs.com"},
	{name ="Snehasis Chowdhury", email="snehasis@sankhyasutralabs.com"},
]
description = "A package for signal processing and advanced aeroacoustics modules"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://code.sankhyasutralabs.com/sslabs/cross-vertical/pre-post-libraries/dhvani"
Issues = "https://code.sankhyasutralabs.com/sslabs/cross-vertical/pre-post-libraries/dhvani/-/issues/"

[tool.pdm.version]
source = "file"
path = "src/dhvani/__init__.py"
