[build-system]
requires = ["pdm.backend",
	"numpy",
	"vtk",
	"matplotlib",
	"pandas",
	"scipy",
	"setuptools",
	"pyarrow",
	"pytest",
	"mpi4py",
	"pyvista",
	"streamlit",
]
build-backend = "pdm.backend"

[project]
name = "soniclit"
version = "1.0"
authors = [
	{name ="Dhruv Haldar"},
]
description = "A modern aeroacoustics analysis platform with Streamlit visualization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.pdm.version]
source = "file"
path = "src/soniclit/__init__.py"
